Entrega final proyecto un viaje por ahi

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
         <img class="navbar-brand img-fluid" height="78%" width="48%" src="./img/logo.png" alt="Un viaje por ahí">
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class=" navbar" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <ul> 
                 <a class="nav-link" href="#">Inicio</a>
@@ -83,13 +83,12 @@
         Lagos glaciales, praderas en la Pampa y muchas joyitas no tan conocidas en las que vamos a adentrarnos.
         </p>
          <div class="d-grid gap-2 col-6 mx-auto">   
-        <button type="button"class="buttom">Nos acompañas a dar una vuelta por ahi?</button>
+        <button type="button"class="button">Nos acompañas a dar una vuelta por ahi?</button>
     </div>
     </main>
     <footer class="footer">
         <section class="footer__section">
             <h3 class="footer__parrafo">Seguinos para seguir recorriendo</h3>
-
             <ul class="footer__lista">
                 <li class="footer__item"><a href="URL DE LA RED SOCIAL" target="_blank"><img loading="lazy" alt="Sígueme en Facebook" height="35" width="35" src=" https://1.bp.blogspot.com/-Pop-U7OywXs/YPhkfrImyiI/AAAAAAAAA1Y/UBnVfTK9j2U-bIUqwZYMNSQPvz_l06mbwCPcBGAYYCw/s0/facebook-icono.png" title="Sígueme en Facebook"/></a>
                 </li>
