--- a/section/contacto.html
+++ b/section/contacto.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <img class="navbar-brand img-fluid" height="78%" width="48%" src="../img/logo.png" alt="Un viaje por ahí">
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                     <ul> 
                     <a class="nav-link" href="../index.html">Inicio</a>
